# FairRecovery-PlusPlus

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  FAIRRECOVERY_AUDIT.md  FairRecovery_PlusPlus_Demo.ipynb  OpenEnv_Hackathon_Resources.pdf.txt  README.md  [External] Apr ‘26 OpenEnv Hackathon Themes & Judging Criteria.pdf.txt  [External] Meta OpenEnv Hackathon Participant Help Guide.pdf.txt  [External] OpenEnv Hackathon FAQs.pdf.txt  __init__.py.bak  __init__1.py.bak  app.py  blog.md  build_notebook_user.py  client.py  constants.py  episode_log.csv  fairrecovery_environment.py  generate_model_comparison.py  generate_summary_plots.py  inference (1).py  inference.py  logging_config.py  models.py  ollama_training_summary.json  openenv.yaml  pyproject.toml  requirements.txt  rewards.py  rubrics.py  sarvam_training_summary.json  shield.py  state.py  tasks.py  train.ipynb  train_COMPLETE.ipynb  train_ollama_local.py  train_real_llm_colab.py  (+3 more)
adapter/: README.md  adapter_config.json
docs/: README_FairRecovery.md  bug_fixes.py  train_llama_1b_colab.ipynb  train_llama_final.ipynb  train_qwen_final.ipynb
evidence/model/: README.md  adapter_config.json
fairrecovery_env/: __init__.py  agents.py  behavior_analyzer.py  constants.py  logging_config.py  models.py  predictor.py  rewards.py  rubrics.py  shield.py  state.py  tasks.py
server/: __init__.py  app.py  fairrecovery_environment.py
tests/: test_environment.py
to fix/: HF_blog_post.md
